<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:id="@+id/relative_layout_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:id="@+id/text_view_stop_point_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/arrivals_item_card_stop_point_value"
            android:maxLines="1"
            android:ellipsize="end"/>
        <TextView
            android:id="@+id/text_view_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/text_view_stop_point_name_value"
            android:text="@string/arrivals_item_card_line"/>
        <TextView
            android:id="@+id/text_view_line_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/text_view_stop_point_name_value"
            android:text="@string/arrivals_item_card_line_value"
            android:gravity="end"/>
        <TextView
            android:id="@+id/text_view_arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/text_view_line"
            android:text="@string/arrivals_item_card_arrival_time"/>
        <TextView
            android:id="@+id/text_view_arrival_time_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/text_view_line"
            android:text="@string/arrivals_item_card_arrival_time_value"
            android:gravity="end"/>
        <TextView
            android:id="@+id/text_view_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/text_view_arrival_time"
            android:text="@string/arrivals_item_card_destination"/>
        <TextView
            android:id="@+id/text_view_destination_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/text_view_arrival_time"
            android:text="@string/arrivals_item_card_destination_value"
            android:gravity="end"/>
        <TextView
            android:id="@+id/text_view_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/text_view_destination"
            android:text="@string/arrivals_item_card_distance"/>
        <TextView
            android:id="@+id/text_view_distance_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/text_view_destination"
            android:text="@string/arrivals_item_card_distance_value"
            android:gravity="end"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>