<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/searchDistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/activity_main_search_distance"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/activity_main_search_distance_value"
                android:textAlignment="textEnd"/>
        </LinearLayout>
        <com.google.android.material.slider.Slider
            android:id="@+id/searchDistanceSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="100"
            android:valueFrom="100"
            android:valueTo="5000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/waitTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/activity_main_wait_time"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/activity_main_wait_time_value"
                android:textAlignment="textEnd"/>
        </LinearLayout>
        <com.google.android.material.slider.Slider
            android:id="@+id/waitTimeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="5"
            android:valueFrom="5"
            android:valueTo="120"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/no_arrivals_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_main_no_arrivals_message"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center"
            android:visibility="gone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/arrivals_item_card"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>